[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menus/MainMenu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 600.0
color = Color( 0.698039, 0.854902, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -64.5
margin_right = 106.0
margin_bottom = 64.5
alignment = 1

[node name="Resolution" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 30.0
margin_right = 212.0
margin_bottom = 50.0
text = "RÃ©soudre"

[node name="Edition" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 54.0
margin_right = 212.0
margin_bottom = 74.0
text = "Editer"

[node name="Quitter" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 78.0
margin_right = 212.0
margin_bottom = 98.0
text = "Quitter"

[connection signal="pressed" from="ColorRect/VBoxContainer/Resolution" to="." method="_on_Resolution_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Edition" to="." method="_on_Edition_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Quitter" to="." method="_on_Quitter_pressed"]
